Rectify IntelliJ warnings