@@ -4,7 +4,6 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.maven.model.Model;
 import org.apache.maven.model.io.xpp3.MavenXpp3Reader;
 import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
@@ -37,7 +36,7 @@ public class MavenModuleDependencyGraph {
                                 throw new RuntimeException(e);
                             }
                         })
-                        .collect(Collectors.toList());
+                        .toList();
                 children.forEach(mavenModule::addChild);
             }
             root.addChild(mavenModule);
